# query-package-documentation

./: .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  LICENSE  README.md  pyproject.toml
docs/source/: conf.py  generative_ai.dataset_generation.orchestrate_generation.rst  generative_ai.dataset_generation.rst  generative_ai.dataset_generation.step_1_generation.rst  generative_ai.dataset_generation.step_2_generation.rst  generative_ai.dataset_generation.utils_generation.rst  generative_ai.information_retrieval.orchestrate_retrieval.rst  generative_ai.information_retrieval.rst  generative_ai.information_retrieval.step_1_retrieval.rst  generative_ai.information_retrieval.step_2_retrieval.rst  generative_ai.information_retrieval.step_3_retrieval.rst  generative_ai.information_retrieval.utils_retrieval.rst  generative_ai.rst  generative_ai.top_level.rst  generative_ai.utils_top_level.rst  index.rst  modules.rst
docs/source/guidelines/: CLI.md  GOTCHAS.md  GUI.md  INDEX.md  INSTALL.md
requirements/: constraints.fine_tuning.txt  constraints.txt  requirements.fine_tuning.txt  requirements.txt
src/: cli.py  gui.py
src/generative_ai/: __init__.py  cli.py  constraints.txt  metadata.json  requirements.txt  top_level.py  utils_top_level.py
src/generative_ai/dataset_generation/: __init__.py  constraints.txt  orchestrate_generation.py  requirements.txt  step_1_generation.py  step_2_generation.py  utils_generation.py
src/generative_ai/fine_tuning/: constraints.txt  step_1_tuning.ipynb
src/generative_ai/fine_tuning/v1_zephyr_7b_beta/: step_2_tuning.ipynb
src/generative_ai/fine_tuning/v2_opt_350m/: end_to_end_using_instruction_without_context.ipynb
src/generative_ai/fine_tuning/v3_opt_350m/: step_1.ipynb  step_2.ipynb
src/generative_ai/information_retrieval/: __init__.py  constraints.txt  orchestrate_retrieval.py  requirements.txt  step_1_retrieval.py  step_2_retrieval.py  step_3_retrieval.py  utils_retrieval.py
