[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools>=65.5.1",
]

[project]
name = "query-package-documentation"
version = "0.0.1"
description = "A package to explore documentations"
keywords = [
  "documentation",
  "generative-ai",
]
license = { file = "LICENSE" }
maintainers = [
  { name = "Anirban Ray",  email = "39331844+yarnabrina@users.noreply.github.com" },
]
authors = [
  { name = "Anirban Ray",  email = "39331844+yarnabrina@users.noreply.github.com" },
]
requires-python = "==3.11.*"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Framework :: Flake8",
  "Framework :: Pydantic",
  "Framework :: Pytest",
  "Framework :: Sphinx",
  "Intended Audience :: Developers",
  "License :: OSI Approved",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Topic :: Software Development",
  "Topic :: Software Development :: Build Tools",
  "Topic :: Software Development :: Libraries",
  "Topic :: Utilities",
  "Typing :: Typed",
]
dynamic=[
  "readme",
]
dependencies = [
  "chromadb<0.5,>=0.4.15",
  "ctransformers<0.3,>=0.2.27",
  "gradio<4.13,>=4.12",
  "jq<1.7,>=1.6",
  "langchain==0.0.353",
  "numpydoc<1.7,>=1.6",
  "pydantic<2.6,>=2.4.2",
  "sentence-transformers<2.3,>=2.2.2",
  "transformers<4.37,>=4.35",
  "typer<0.10,>=0.9",
  "typing-extensions<4.10,>=4.9",
]
[project.optional-dependencies]
all = [
  "autoflake",
  "bandit",
  "black",
  "blacken-docs",
  "build",
  "codespell",
  "coverage[toml]",
  "docformatter[tomli]",
  "flake8",
  "furo",
  "hypothesis[pytest]",
  "interrogate",
  "isort",
  "mypy",
  "nox",
  "pre-commit",
  "pydocstyle[toml]",
  "pylint",
  "pyproject-fmt",
  "pyright",
  "pytest",
  "pyupgrade",
  "Sphinx",
  "sphinx-copybutton",
  "twine",
  "validate-pyproject",
  "vulture",
]
dev = [
  "codespell",
  "nox",
  "pre-commit",
]
doc = [
  "furo",
  "Sphinx",
  "sphinx-copybutton",
]
fine-tuning = [
  "accelerate<0.26,>=0.24.1",
  "bitsandbytes<0.42,>=0.41.2",
  "datasets<2.17,>=2.15",
  "peft<0.8,>=0.6.2",
  "safetensors<0.5,>=0.4",
  "torch<2.2,>=2.1.1",
  "transformers<4.37,>=4.35.2",
  "trl<0.8,>=0.7.4",
]
format = [
  "autoflake",
  "black",
  "blacken-docs",
  "docformatter[tomli]",
  "isort",
  "pyproject-fmt",
  "pyupgrade",
]
lint = [
  "bandit",
  "flake8",
  "interrogate",
  "mypy",
  "pydocstyle[toml]",
  "pylint",
  "pyright",
  "validate-pyproject",
  "vulture",
]
release = [
  "build",
  "twine",
]
test = [
  "coverage[toml]",
  "hypothesis[pytest]",
  "pytest",
]
[project.urls]
"Bug Tracker" = "https://github.com/yarnabrina/query-package-documentation/issues"
"Documentation" = "https://query-package-documentation.readthedocs.io"
"Source Code" = "https://github.com/yarnabrina/query-package-documentation"
[project.scripts]
docs-cli = "cli:CLI_APPLICATION"
[project.gui-scripts]
docs-gui = "gui:main"

[tool.setuptools]
py-modules = [
  "cli",
  "gui",
]

[tool.setuptools.dynamic]
readme = { file = "README.md", content-type = "text/markdown" }

[tool.setuptools.packages.find]
where = [
  "src",
]
include = [
  "generative_ai*",
]
exclude = [
  "*tests*",
]
namespaces = false

[tool.setuptools.package-data]
"generative_ai" = [
  "metadata.json",
  "py.typed",
]

[tool.setuptools.exclude-package-data]
"*" = [
  ".gitattributes",
  ".gitignore",
]

[tool.black]
line-length = 99
target-version = [
  "py311",
]
safe = true

[tool.ruff]
fix = true
ignore = [
  "COM",
  "D",
  "D203",
  "D213",
  "DTZ",
  "EM",
  "FBT",
  "FIX",
  "G",
  "ICN",
  "PD",
  "RET501",
  "RET502",
  "RET503",
  "RET504",
  "SLF",
  "TRY003",
]
ignore-init-module-imports = true
line-length = 99
output-format = "grouped"
select = [
  "ALL",
]
src = [
  "src",
]
target-version = "py311"

[tool.ruff.flake8-annotations]
allow-star-arg-any = true
ignore-fully-untyped = true

[tool.ruff.flake8-bugbear]
extend-immutable-calls = [
  "fastapi.Depends",
  "fastapi.Query",
  "pydantic.Field",
]

[tool.ruff.flake8-type-checking]
exempt-modules = [
  "typing",
  "typing_extensions",
]
runtime-evaluated-base-classes = [
  "pydantic.BaseModel",
]

[tool.ruff.pep8-naming]
classmethod-decorators = [
  "pydantic.field_validator",
]

[tool.ruff.per-file-ignores]
"**/__init__.py" = [
  "F401",
]
"**/test_*.py" = [
  "S101",
]

[tool.ruff.pycodestyle]
max-doc-length = 99

[tool.ruff.pydocstyle]
convention = "numpy"
ignore-decorators = [
  "typing.overload",
]

[tool.ruff.pyupgrade]
keep-runtime-typing = true

[tool.isort]
overwrite_in_place = true
profile = "black"
atomic = true
float_to_top = true
line_length = 99
remove_redundant_aliases = true
src_paths = [
  "src",
]
py_version = 311

[tool.pylint.main]
extension-pkg-allow-list = [
  "pydantic",
]
fail-under = 8.5
jobs = 0
recursive = true

[tool.pylint.basic]
include-naming-hint = true

[tool.pylint.format]
max-line-length = 99

[tool.pylint.logging]
logging-format-style = "new"

[tool.pylint."messages control"]
enable = [
  "all",
]
disable = [
  "logging-fstring-interpolation",
  "missing-class-docstring",
  "missing-function-docstring",
  "missing-module-docstring",
]

[tool.pylint.reports]
output-format = "colorized"

[tool.docformatter]
in-place = true
recursive = true
wrap-summaries = 99
wrap-descriptions = 99

[tool.pytest.ini_options]
addopts = "--junit-xml=pytest_junit_report.xml --doctest-modules --doctest-ignore-import-errors --doctest-continue-on-failure"
console_output_style = "count"

[tool.coverage.run]
branch = true
command_line = "--module pytest"
data_file = "coverage_data"
include = [
  "src/**/*.py",
]
omit = [
  "**/tests/*.py",
]

[tool.coverage.report]
fail_under = 85
include = [
  "src/**/*.py",
]
omit = [
  "**/tests/*.py",
]
precision = 2
exclude_lines = [
  "pragma: no cover",
  "if __name__ == .__main__.:",
  "if typing.TYPE_CHECKING:",
]

[tool.coverage.html]
directory = "coverage_html_report"

[tool.coverage.xml]
output = "coverage_xml_report.xml"

[tool.mypy]
files = [
  "src",
]
exclude = [
  "conftest",
  "test_",
]
strict = true

[tool.pyright]
include = [
  "src",
]
exclude = [
  "**/tests/*.py",
]
pythonVersion = "3.11"

[tool.autoflake]
in-place = true
remove-all-unused-imports = true
recursive = true
expand-star-imports = true
ignore-init-module-imports = true
remove-duplicate-keys = true
remove-unused-variables = true

[tool.interrogate]
fail-under = 85
ignore-init-method = true

[tool.pydocstyle]
convention = "numpy"

[tool.vulture]
min_confidence = 100
paths = [
  "src",
]
