[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools>=65.5.1",
]

[project]
name = "query-package-documentation"
version = "0.0.2"
description = "A package to explore documentations"
keywords = [
  "documentation",
  "generative-ai",
]
license = { file = "LICENSE" }
maintainers = [
  { name = "Anirban Ray", email = "39331844+yarnabrina@users.noreply.github.com" },
]
authors = [
  { name = "Anirban Ray", email = "39331844+yarnabrina@users.noreply.github.com" },
]
requires-python = "==3.11.*"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Framework :: Flake8",
  "Framework :: Pydantic",
  "Framework :: Sphinx",
  "Intended Audience :: Developers",
  "License :: OSI Approved",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Topic :: Software Development",
  "Topic :: Software Development :: Build Tools",
  "Topic :: Software Development :: Libraries",
  "Topic :: Utilities",
  "Typing :: Typed",
]
dynamic=[
  "readme",
]
dependencies = [
  "chromadb<0.5,>=0.4.15",
  "ctransformers<0.3,>=0.2.27",
  "gradio<4.17,>=4.12",
  "jq<1.7,>=1.6",
  "langchain<0.1.5,>=0.1.1",
  "numpydoc<1.7,>=1.6",
  "pydantic<2.6,>=2.4.2",
  "sentence-transformers<2.3,>=2.2.2",
  "transformers<4.38,>=4.36",
  "typer<0.10,>=0.9",
]
[project.optional-dependencies]
all = [
  "autoflake",
  "bandit",
  "black",
  "blacken-docs",
  "build",
  "codespell",
  "docformatter[tomli]",
  "flake8",
  "furo",
  "interrogate",
  "isort",
  "myst-parser[linkify]",
  "numpydoc",
  "pre-commit",
  "pylint",
  "pyproject-fmt",
  "pyupgrade",
  "Sphinx",
  "sphinx-copybutton",
  "twine",
  "validate-pyproject",
  "vulture",
]
dev = [
  "codespell",
  "numpydoc",
  "pre-commit",
]
doc = [
  "furo",
  "myst-parser[linkify]",
  "Sphinx",
  "sphinx-copybutton",
]
fine-tuning = [
  "accelerate<0.27,>=0.24.1",
  "bitsandbytes<0.43,>=0.41.2",
  "datasets<2.17,>=2.15",
  "peft<0.8,>=0.6.2",
  "safetensors<0.5,>=0.4",
  "torch<2.2,>=2.1.1",
  "transformers<4.38,>=4.36",
  "trl<0.8,>=0.7.4",
]
format = [
  "autoflake",
  "black",
  "blacken-docs",
  "docformatter[tomli]",
  "isort",
  "pyproject-fmt",
  "pyupgrade",
]
lint = [
  "bandit",
  "flake8",
  "interrogate",
  "pylint",
  "validate-pyproject",
  "vulture",
]
release = [
  "build",
  "twine",
]
[project.urls]
"Bug Tracker" = "https://github.com/yarnabrina/query-package-documentation/issues"
"Documentation" = "https://query-package-documentation.readthedocs.io"
"Source Code" = "https://github.com/yarnabrina/query-package-documentation"
[project.scripts]
docs-cli = "cli:CLI_APPLICATION"
[project.gui-scripts]
docs-gui = "gui:main"

[tool.setuptools]
py-modules = [
  "cli",
  "gui",
]

[tool.setuptools.dynamic]
readme = { file = "README.md", content-type = "text/markdown" }

[tool.setuptools.packages.find]
where = [
  "src",
]
include = [
  "generative_ai*",
]
namespaces = false

[tool.setuptools.package-data]
"generative_ai" = [
  "metadata.json",
  "py.typed",
]

[tool.setuptools.exclude-package-data]
"*" = [
  ".gitattributes",
  ".gitignore",
]

[tool.black]
line-length = 99
target-version = [
  "py311",
]

[tool.ruff]
fix = true
ignore = [
  "COM",
  "D203",
  "D213",
  "DTZ",
  "EM",
  "FBT",
  "FIX",
  "G",
  "ICN",
  "PD",
  "RET501",
  "RET502",
  "RET503",
  "RET504",
  "SLF",
  "TRY003",
]
ignore-init-module-imports = true
line-length = 99
output-format = "grouped"
select = [
  "ALL",
]
src = [
  "src",
]
target-version = "py311"

[tool.ruff.flake8-annotations]
allow-star-arg-any = true
ignore-fully-untyped = true

[tool.ruff.flake8-bugbear]
extend-immutable-calls = [
  "fastapi.Depends",
  "fastapi.Query",
  "pydantic.Field",
]

[tool.ruff.flake8-type-checking]
exempt-modules = [
  "typing",
  "typing_extensions",
]
runtime-evaluated-base-classes = [
  "pydantic.BaseModel",
]

[tool.ruff.pep8-naming]
classmethod-decorators = [
  "pydantic.field_validator",
]

[tool.ruff.per-file-ignores]
"**/__init__.py" = [
  "F401",
]

[tool.ruff.pycodestyle]
max-doc-length = 99

[tool.ruff.pydocstyle]
convention = "numpy"
ignore-decorators = [
  "typing.overload",
]

[tool.ruff.pyupgrade]
keep-runtime-typing = true

[tool.isort]
overwrite_in_place = true
profile = "black"
atomic = true
float_to_top = true
line_length = 99
remove_redundant_aliases = true
src_paths = [
  "src",
]
py_version = 311

[tool.pylint.main]
extension-pkg-allow-list = [
  "pydantic",
]
fail-under = 8.5
jobs = 0
recursive = true

[tool.pylint.basic]
include-naming-hint = true

[tool.pylint.format]
max-line-length = 99

[tool.pylint.logging]
logging-format-style = "new"

[tool.pylint."messages control"]
enable = [
  "all",
]
disable = [
  "logging-fstring-interpolation",
]

[tool.pylint.reports]
output-format = "colorized"

[tool.docformatter]
in-place = true
recursive = true
wrap-summaries = 99
wrap-descriptions = 99

[tool.autoflake]
in-place = true
remove-all-unused-imports = true
recursive = true
expand-star-imports = true
ignore-init-module-imports = true
remove-duplicate-keys = true
remove-unused-variables = true

[tool.interrogate]
fail-under = 85
ignore-init-method = true

[tool.vulture]
min_confidence = 100
paths = [
  "src",
]

[tool.numpydoc_validation]
checks = [
  "all",
  "GL01",
  "ES01",
  "PR08",
  "PR09",
  "RT04",
  "RT05",
  "SA01",
  "EX01",
]
